<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>me.blvckbytes</groupId>
    <artifactId>BBTweaks</artifactId>
    <version>0.1</version>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <repositories>
        <repository>
            <id>papermc</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>
        <repository>
            <id>neetgames</id>
            <url>https://nexus.neetgames.com/repository/maven-releases/</url>
        </repository>
        <repository>
            <id>opencollab-snapshot</id>
            <url>https://repo.opencollab.dev/main/</url>
        </repository>
        <repository>
            <id>enginehub</id>
            <url> https://maven.enginehub.org/repo/</url>
        </repository>
        <repository>
            <id>essentialsx</id>
            <url>https://repo.essentialsx.net/releases/</url>
        </repository>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
        <repository>
            <id>mcmmo-repo</id>
            <url>https://nexus.neetgames.com/repository/maven-public</url>
        </repository>
        <!-- AdvancedRegionMarket -->
        <repository>
            <id>Alex9849</id>
            <url>https://nexus.alex9849.net/repository/maven-releases/</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>com.gmail.nossr50.mcMMO</groupId>
            <artifactId>mcMMO</artifactId>
            <version>2.2.048</version>
            <scope>provided</scope>
            <exclusions>
                <exclusion>
                    <groupId>*</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>io.papermc.paper</groupId>
            <artifactId>paper-api</artifactId>
            <version>26.1.2.build.53-stable</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>24.1.0</version>
        </dependency>
        <dependency>
            <groupId>me.blvckbytes</groupId>
            <artifactId>SyllablesMatcher</artifactId>
            <version>0.1</version>
        </dependency>
        <dependency>
            <groupId>at.blvckbytes</groupId>
            <artifactId>CMMapper</artifactId>
            <version>0.0.1</version>
        </dependency>
        <dependency>
            <groupId>org.geysermc.floodgate</groupId>
            <artifactId>api</artifactId>
            <version>2.2.5-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>me.blvckbytes</groupId>
            <artifactId>ItemPredicateParser</artifactId>
            <version>0.1.1</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.sk89q.worldguard</groupId>
            <artifactId>worldguard-bukkit</artifactId>
            <version>7.0.14</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>net.essentialsx</groupId>
            <artifactId>EssentialsXDiscord</artifactId>
            <version>2.20.1</version>
            <scope>provided</scope>
            <exclusions>
                <exclusion>
                    <groupId>*</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>at.blvckbytes</groupId>
            <artifactId>PlaytimeRewards</artifactId>
            <version>0.1</version>
        </dependency>
        <dependency>
            <groupId>net.essentialsx</groupId>
            <artifactId>EssentialsX</artifactId>
            <version>2.21.2</version>
            <scope>provided</scope>
            <exclusions>
                <exclusion>
                    <groupId>*</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>net.luckperms</groupId>
            <artifactId>api</artifactId>
            <version>5.4</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.github.Zrips</groupId>
            <artifactId>Jobs</artifactId>
            <version>v5.2.6.2</version>
            <scope>provided</scope>
            <exclusions>
                <exclusion>
                    <groupId>*</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.gmail.nossr50.mcMMO</groupId>
            <artifactId>mcMMO</artifactId>
            <version>2.2.048</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>net.alex9849.advancedregionmarket</groupId>
            <artifactId>advancedregionmarket</artifactId>
            <version>3.5.5</version>
            <scope>provided</scope>
            <exclusions>
                <exclusion>
                    <groupId>*</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.9.0</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
                <includes>
                    <include>plugin.yml</include>
                    <include>config/config.yml</include>
                </includes>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <artifactSet>
                        <includes>
                            <include>me.blvckbytes:SyllablesMatcher</include>
                            <include>at.blvckbytes:ComponentMarkup</include>
                            <include>at.blvckbytes:CMMapper</include>
                            <include>com.github.cryptomorin:XSeries</include>
                        </includes>
                    </artifactSet>

                    <relocations>
                        <relocation>
                            <pattern>me.blvckbytes.syllables_matcher</pattern>
                            <shadedPattern>me.blvckbytes.bbtweaks.syllables_matcher</shadedPattern>
                        </relocation>

                        <relocation>
                            <pattern>at.blvckbytes.component_markup</pattern>
                            <shadedPattern>me.blvckbytes.bbtweaks.component_markup</shadedPattern>
                        </relocation>

                        <relocation>
                            <pattern>at.blvckbytes.cm_mapper</pattern>
                            <shadedPattern>me.blvckbytes.bbtweaks.cm_mapper</shadedPattern>
                        </relocation>

                        <relocation>
                            <pattern>com.cryptomorin.xseries</pattern>
                            <shadedPattern>me.blvckbytes.bbtweaks.com.cryptomorin.xseries</shadedPattern>
                        </relocation>
                    </relocations>

                    <filters>
                        <filter>
                            <artifact>*:*</artifact>
                            <excludes>
                                <exclude>META-INF/license/**</exclude>
                                <exclude>META-INF/*</exclude>
                                <exclude>META-INF/maven/**</exclude>
                                <exclude>LICENSE</exclude>
                                <exclude>NOTICE</exclude>
                                <exclude>/*.txt</exclude>
                                <exclude>*.ebnf</exclude>
                                <exclude>build.properties</exclude>
                            </excludes>
                        </filter>
                    </filters>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>25</source>
                    <target>25</target>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>